# GatorConfig

./: .gitignore  .pylintrc  LICENSE  README.md  config.yml  gatorgrader.yml  pyproject.toml  requirements.txt
.github/: cspell.json
.github/ISSUE_TEMPLATE/: new-feature.md
.github/workflows/: grade.yml  main.yml  publish.yml
GatorConfig/: GatorConfig.py  gator_config.py  test_GatorConfig.py
config/: gatorgrader.yml
gatorconfig/: actions_configuration.py  gator_config.py  gui_main.py  scrape_releases.py
gatorconfig/gui/: check_file.py  cwidgets.py  form.py  homepage.py
githubactions/: create_actions_configuration.py
src/: GatorYaml.py  actions_configuration.py  gator_config.py  gator_yaml.py  gatorgrader.yml  gui_main.py  main.py  scrape_releases.py  split_file_path.py
src/gui/: check_file.py  form.py  homepage.py
tests/: test_GatorConfig.py  test_GatorYaml.py  test_actions_configuration.py  test_create_actions_configuration.py  test_gator_config.py  test_gator_yaml.py  test_gui_main.py  test_scrape_releases.py  test_split_file_path.py
