[tool.poetry]
name = "project-template"
version = "0.1.0"
description = "Simple Python project template"
authors = [""]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
typer = "^0.4.0"
"ruamel.yaml" = "^0.17.20"
PyQt5 = "^5.15.6"
pytest-qt = "^4.0.2"
pytest-xvfb = "^2.0.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.9.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"

[tool.taskipy.tasks]
test = "pytest --cov-report term-missing --cov-fail-under=70  --cov-branch --cov=src tests/ --ignore src/gui/"
lint = "pylint src/ tests/ src/gui/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
